Sun Jun  6 08:21:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* NEWS: Enumerable#join has been reverted.  [ruby-core:30604]

Sun Jun  6 02:56:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_unicode_p): check the encoding is Unicode
	  or not by the name; not function's pointer. [ruby-dev:41479]

Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_expr_str): ASCII incompatible strings
	  must always escape or converted.

	* re.c (rb_reg_expr_str): use rb_str_buf_cat_escaped_char
	  when resenc is given: for Regexp#inspect or error message.

	  * re.c (rb_reg_desc): add 'n' for ENCODING_NONE.

Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (sym_inspect): Escape when the symbol is not
	  resulted encoding and not ascii_only. It had escaped
	  ascii-incompatible string, but it is wrong.

Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_buf_cat_escaped_char): defined.
	  Splited from rb_str_inspect.

Sat Jun  5 23:14:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): inspect as ASCII when the codepoint
	  of a character in Unicode string is ASCII printable one.

Sat Jun  5 15:59:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options, load_file_internal): $0 seen from
	  required libraries by -r option should be the main script.
	  [ruby-core:23717]

Sat Jun  5 15:15:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb (EnvUtil#invoke_ruby): support for child
	  process env.

Sat Jun  5 14:11:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/net/imap/test_imap.rb (test_exception_during_shutdown):
	  need to raise always.

Sat Jun  5 13:10:47 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb (eql?, ==, minor): Fix bugs when comparing/returning
	  some empty matrices.

Sat Jun  5 11:00:48 2010  Tanaka Akira  <akr@fsij.org>
